--- a/index.html
+++ b/index.html
@@ -2,19 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>virtualNotebook</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
    <div class="top">
        <div><img class="topimg1" src="img/notebook.png"></div>
-       <div><img class="topimg2" src="img/login.png"></div>
+       <div><img class="topimg2" style="cursor: pointer;" src="img/login.png"></div>
    </div>
     <div class="main">
         <canvas id="record"></canvas>
         <canvas id="work"></canvas>
         <canvas id="study"></canvas>
-        
         <div class="bookDiv"><img class="book" src="img/mainbook.png">
         <img class="create" src="img/create.png">
         </div>
