--- a/life.html
+++ b/life.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="css/life.css">
+    <link rel="stylesheet" href="css/common.css">
 </head>
 <body>
     <div class="top">
@@ -25,9 +26,64 @@
         <img class="mirror" src="img/life/mirror.png">
         <canvas id="canvas"></canvas>
     </div>
+    <div class="addTask">
+        <div>写下您将要添加的事项</div>
+        <div>
+            <div>事项名称:</div>
+            <div><input type="text"></div>
+        </div>
+        <div>
+            <div>事项时间:</div>
+            <div>
+                <input type="datetime-local"/>
+            </div>
 
+        </div>
+        <div>
+          <button id="submit">提交</button>
+        </div>
+    </div>
+    <div class="getTask">
 
+        <div>提醒事项</div>
+        <div class="taskLine">
+            <div>
+                <div class="circle"></div>
+            </div>
+            <div>
+                <div>运动会开幕式致辞</div>
+                <div class="time">2017/07/14 15:00</div>
+            </div>
+        </div>
+        <div class="taskLine">
+            <div>
+                <div class="circle"></div>
+            </div>
+            <div>
+                <div>运动会开幕式致辞</div>
+                <div class="time">2017/07/14 15:00</div>
+            </div>
+        </div>
+        <div class="taskLine">
+            <div>
+                <div class="circle"></div>
+            </div>
+            <div>
+                <div>运动会开幕式致辞</div>
+                <div class="time">2017/07/14 15:00</div>
+            </div>
+        </div>
+        <div>
+            <div>现有事项:6</div>
+            <button id="add">添加</button>
+        </div>
+
+    </div>
+
+    <img class="left" src="img/work/left.png">
+    <img class="right" src="img/work/right.png">
     <script src="js/life.js"></script>
     <script src="js/clock.js"></script>
+
 </body>
 </html>
