界面 基本差不多  自适应还没弄

--- a/life.html
+++ b/life.html
@@ -47,7 +47,7 @@
         </div>
         <div id="closeAddTask">&times;</div>
     </div>
-    <div class="getTask">
+    <div class="getTask" id="getTask">
 
         <div>
             <img style="flex: 1" width="40" height="40" src="img/remind.png">
@@ -113,17 +113,17 @@
     <div class='tools' id="tools">
         <div>
             <img src="img/edit.png">
-            编辑
+            <div>编辑</div>
         </div>
         <div>
 
             <img src="img/delete.png">
-            删除
+            <div>删除</div>
         </div>
     </div>
     <img class="left" src="img/work/left.png">
     <img class="right" src="img/work/right.png">
-
+    <img class="selected" id="selected" src="img/life/selected.png">
 </body>
     <script src="js/jquery-3.2.0.min.js"></script>
     <script src="js/API.js"></script>
