交互差不多了

--- a/life.html
+++ b/life.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="content">
-        <img class="plant touch" src="img/life/plant.png">
+        <img  class="plant touch" src="img/life/plant.png">
         <img class="window touch" src="img/life/window.png">
         <img class="besideTable" src="img/life/besideTable.png">
         <img class="water touch" src="img/life/water.png">
@@ -117,7 +117,7 @@
         </div>
         <div>
 
-            <img src="img/delete.png">
+            <img id="deleteBtn" src="img/delete.png">
             <div>删除</div>
         </div>
     </div>
