交互差不多了

--- a/life.html
+++ b/life.html
@@ -136,7 +136,7 @@
     </div>
     <div class='tools' id="tools">
         <div>
-            <img src="img/edit.png">
+            <img id="editBtn" src="img/edit.png">
             <div>编辑</div>
         </div>
         <div>
