--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./CSS/login.css">
-    <!--<script src="./js/login.js"></script>-->
+
     <title>Document</title>
 </head>
 
@@ -22,10 +22,13 @@
             <input class="password" type="password" placeholder="请输入密码">
             <input class="email" type="text" placeholder="请输入邮箱">
         </div>
-        <div class="button_area">
+        <div class="button_area" id="register">
             注册账号
         </div>
     </div>
 </body>
-
+<script src="js/jquery-3.2.0.min.js"></script>
+<script src="js/API.js"></script>
+<script src="js/Ajaxfunction.js"></script>
+<script src="js/login.js"></script>
 </html>
