交互差不多了

--- a/life.html
+++ b/life.html
@@ -26,7 +26,7 @@
         <img class="charge touch" src="img/life/charge.png">
         <img class="topitem" src="img/life/topitem.png">
         <img class="book touch" src="img/life/book.png">
-        <img class="mirror touch" src="img/life/mirror.png">
+        <img class="mirror" src="img/life/mirror.png">
         <canvas id="canvas"></canvas>
     </div>
 
