添加注册页面,登录注册差背景图

--- a/login.html
+++ b/login.html
@@ -11,21 +11,20 @@
 </head>
 
 <body>
-    <div class="main">
-        <div class="my_notebook"><img src="./img/login/my_notebook.png" class="pic"></div>
-        <div class="login_register">
-            <div class="register">注册</div>
-            <div class="login">登录</div>
-        </div>
-        <div class="input_area">
-            <input class="account" type="text" placeholder="请输入账号">
-            <input class="password" type="password" placeholder="请输入密码">
-            <input class="email" type="text" placeholder="请输入邮箱">
-        </div>
-        <div class="button_area" id="register">
-            注册账号
-        </div>
+<div class="main">
+    <div class="my_notebook"><img src="./img/login/my_notebook.png" class="pic"></div>
+    <div class="login_register">
+        <div class="register">注册</div>
+        <div class="login">登录</div>
     </div>
+    <div class="input_area login_area" >
+        <input class="account" type="text" placeholder="请输入账号">
+        <input class="password" type="password" placeholder="请输入密码">
+    </div>
+    <div class="button_area" id="login">
+        登录账号
+    </div>
+</div>
 </body>
 <script src="js/jquery-3.2.0.min.js"></script>
 <script src="js/API.js"></script>
