--- a/login.html
+++ b/login.html
@@ -29,5 +29,27 @@
 <script src="js/jquery-3.2.0.min.js"></script>
 <script src="js/API.js"></script>
 <script src="js/Ajaxfunction.js"></script>
-<script src="js/login.js"></script>
+<script src="js/jquery.cookie.js"></script>
+<script>
+    document.getElementById('login').onclick=function () {
+        var username=document.getElementsByClassName('account')[0].value;
+        var password=document.getElementsByClassName('password')[0].value;
+        if(username==''||password==""){
+            alert('用户名或密码不能为空');
+        }else{
+            var user=new AjaxFunction();
+            user.login(username,password,function (data) {
+                if(data.status==300){
+                    alert('用户名或密码错误');
+                }else if(data.status==200){
+                    alert('登陆成功');
+                    $.cookie('username',username,{expires:7 ,path: '/'})
+                }
+            },function (data) {
+                alert('网络连接超时')
+            })
+        }
+    }
+
+</script>
 </html>
