--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
         <div class="register">注册</div>
         <div class="login">登录</div>
     </div>
-    <div class="input_area login_area" >
+    <div class="input_area login_area">
         <input class="account" type="text" placeholder="请输入账号">
         <input class="password" type="password" placeholder="请输入密码">
     </div>
@@ -42,6 +42,7 @@
                 if(data.status==300){
                     alert('用户名或密码错误');
                 }else if(data.status==200){
+                    console.log(data);
                     alert('登陆成功');
                     $.cookie('username',username,{expires:7 ,path: '/'})
                 }
