--- a/work.html
+++ b/work.html
@@ -3,47 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>work</title>
-    <style>
-        html{
-            width: 100%;
-            height: 100%;
-            margin: 0px;
-            padding: 0px;
-            font-size: 62.5%;
-            background:url(./img/work/bgc.png)no-repeat;
-            background-size:100% 100%;
-        }
-        .main{
-            width: 90%;
-            margin: 0 auto;
-        }
-        .left{
-            margin-top: 8%;
-            width: 30%;
-            /*background-color: green;*/
-            position: relative;
-        }
-        .left img{
-            width: 100%;
-        }
-        .bookCase{
-            width:100%;
-        }
-        .book{
-            width: 58%;
-            height: 17%;
-            position: absolute;
-            top:17.8%;
-            left: 19.5%;
-        }
-        .flowerPot{
-            position: absolute;
-            width: 30%;
-            height: 21%;
-            bottom: 19%;
-            right: 30%;
-        }
-    </style>
+    <link rel="stylesheet" href="./CSS/work.css">
 </head>
 <body>
     <div class="main">
@@ -51,8 +11,18 @@
             <div class="bookCase"><img src="./img/work/bookCase.png" alt="书架图片"></div>
             <div class="book"><img src="./img/work/book1_a.png" alt="书"></div>
             <div class="flowerPot"><img src="./img/work/plant1.png" alt="植物"></div></div>
-        <div class="mid"></div>
-        <div class="right"></div>
+        <div class="mid">
+            <div class="support"><img src="./img/work/bookCase.png" alt="书架图片"></div>
+            <div class="computer"><img src="./img/work/computer1.png" alt="电脑"></div>
+            <div class="table"><img src="./img/work/table.png" alt="桌子"></div>
+        </div>
+        <div class="right">
+            <div class="support"><img src="./img/work/bookCase.png" alt="书架图片"></div>
+            <div class="clock"><img src="./img/work/clock.png" alt="时钟"></div>
+            <div class="chair"><img src="./img/work/chair.png" alt="椅子">
+                <div class="breifCase"><img src="./img/work/breifCase1.png" alt="公文包"></div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
