--- a/life.html
+++ b/life.html
@@ -72,51 +72,53 @@
 
     <div class="getTask" id="getTask">
 
-        <div>
-            <img style="flex: 1" width="40" height="40" src="img/remind.png">
-            <div style="flex: 6">提醒事项</div>
-        </div>
-        <div class="taskLine">
-            <div>
-                <div class="circle"></div>
-            </div>
-            <div>
-                <div>运动会开幕式致辞</div>
-                <div class="time">2017/07/14 15:00</div>
-            </div>
-            <div>
-                <img class="manage" src='img/manage.png'>
-            </div>
-        </div>
-        <div class="taskLine">
-            <div>
-                <div class="circle"></div>
-            </div>
-            <div>
-                <div>运动会开幕式致辞</div>
-                <div class="time">2017/07/14 15:00</div>
-            </div>
-            <div>
-                <img class="manage" src='img/manage.png'>
-            </div>
-        </div>
-        <div class="taskLine">
-            <div>
-                <div class="circle"></div>
-            </div>
-            <div>
-                <div>运动会开幕式致辞</div>
-                <div class="time">2017/07/14 15:00</div>
-            </div>
-            <div>
-                <img class="manage" src='img/manage.png'>
-            </div>
-        </div>
+        <!--<div>-->
+            <!--<img style="flex: 1" width="40" height="40" src="img/remind.png">-->
+            <!--<div style="flex: 6">提醒事项</div>-->
+        <!--</div>-->
 
-        <div>
-            <div>现有事项:6</div>
-            <button id="add">添加</button>
-        </div>
+            <!--<div class="taskLine">-->
+                <!--<div>-->
+                    <!--<div class="circle"></div>-->
+
+                <!--</div>-->
+                <!--<div>-->
+                    <!--<div>运动会开幕式致辞</div>-->
+                    <!--<div class="time">2017/07/14 15:00</div>-->
+                <!--</div>-->
+                <!--<div>-->
+                    <!--<img class="manage" src='img/manage.png'>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="taskLine">-->
+                <!--<div>-->
+                    <!--<div class="circle"></div>-->
+                <!--</div>-->
+                <!--<div>-->
+                    <!--<div>运动会开幕式致辞</div>-->
+                    <!--<div class="time">2017/07/14 15:00</div>-->
+                <!--</div>-->
+                <!--<div>-->
+                    <!--<img class="manage" src='img/manage.png'>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="taskLine">-->
+                <!--<div>-->
+                    <!--<div class="circle"></div>-->
+                <!--</div>-->
+                <!--<div>-->
+                    <!--<div>运动会开幕式致辞</div>-->
+                    <!--<div class="time">2017/07/14 15:00</div>-->
+                <!--</div>-->
+                <!--<div>-->
+                    <!--<img class="manage" src='img/manage.png'>-->
+                <!--</div>-->
+            <!--</div>-->
+
+        <!--<div>-->
+            <!--<div>现有事项:6</div>-->
+            <!--<button id="add">添加</button>-->
+        <!--</div>-->
 
     </div>
 
