--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
 <body>
    <div class="top">
        <div><img class="topimg1" src="img/notebook.png"></div>
-       <div><img class="topimg2" style="cursor: pointer;" src="img/login.png"></div>
+       <div><img class="topimg2" style="cursor: pointer;" src="img/login.png" onclick="href()"></div>
    </div>
     <div class="main">
         <canvas id="record"></canvas>
         <canvas id="work"></canvas>
         <canvas id="study"></canvas>
         <div class="bookDiv"><img class="book" src="img/mainbook.png">
-        <img class="create" src="img/create.png">
+        <img class="create" src="img/create.png" onclick="href()">
         </div>
     </div>
 </body>
+<script>
+    function href() {
+        window.location.href='login.html';
+    }
+</script>
 <script src="js/canvas.js"></script>
 </html>
