--- a/login.html
+++ b/login.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./CSS/login.css">
+    <link rel="stylesheet" href="css/login.css">
 
     <title>Document</title>
 </head>
 
 <body>
 <div class="main">
+
     <div class="my_notebook"><img src="./img/login/my_notebook.png" class="pic"></div>
     <div class="login_register">
         <div class="register">注册</div>
@@ -21,7 +22,7 @@
         <input class="account" type="text" placeholder="请输入账号">
         <input class="password" type="password" placeholder="请输入密码">
     </div>
-    <div class="button_area" id="login">
+    <div class="button_area" id="login" style="cursor: pointer">
         登录账号
     </div>
 </div>
@@ -44,7 +45,8 @@
                 }else if(data.status==200){
                     console.log(data);
                     alert('登陆成功');
-                    $.cookie('username',username,{expires:7 ,path: '/'})
+                    $.cookie('username',username,{expires:7 ,path: '/'});
+                    window.location.href='index.html';
                 }
             },function (data) {
                 alert('网络连接超时')
