--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./CSS/login.css">
+    <link rel="stylesheet" href="css/login.css">
     <title>Document</title>
 </head>
 
@@ -21,7 +21,7 @@
             <input class="password" type="password" placeholder="请输入密码">
             <input class="email" type="text" placeholder="请输入邮箱">
         </div>
-        <div class="button_area" id="register">
+        <div class="button_area" id="register" style="cursor: pointer">
             注册账号
         </div>
     </div>
