--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="main">
         <canvas id="record"></canvas>
         <canvas id="work" style="cursor: pointer"  onclick="workhref()"></canvas>
-        <canvas id="study" class=""  onclick="studyhref()"></canvas>
+        <canvas id="study" style="cursor: pointer" class=""  onclick="studyhref()"></canvas>
         <div class="bookDiv"><img class="book"  src="img/mainbook.png">
         <!--<img class="create" src="img/create.png" onclick="href()">-->
         </div>
