--- a/login.html
+++ b/login.html
@@ -14,8 +14,8 @@
 <div class="main">
 
     <div class="my_notebook"><img src="./img/login/my_notebook.png" class="pic"></div>
-    <div class="login_register">
-        <div class="register">注册</div>
+    <div class="login_register" >
+        <div class="register" onclick="href()">注册</div>
         <div class="login">登录</div>
     </div>
     <div class="input_area login_area">
@@ -53,6 +53,8 @@
             })
         }
     }
-
+    function href() {
+        window.location.href='register.html';
+    }
 </script>
 </html>
